<resources>
    <string name="app_name">iGeneration</string>
    <string name="news">Actualités</string>
    <string name="forum">Forum</string>
    <string name="books">Livres</string>
    <string name="club">Club</string>
    <string name="settings">Paramètres</string>
    <string name="settings_general">Général</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_assistance">Assistance</string>
    <string name="settings_legal">Mention legales / CGU</string>
    <string name="settings_website">Site web</string>
    <string name="settings_contact">Nous contacter</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
